<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#240963"
    tools:context=".MainActivity2"

    >

    <Button
        android:id="@+id/button6"
        android:layout_width="156dp"
        android:layout_height="59dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/eczar_semibold"
        android:text="@string/wizard1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:text="@string/istfind2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="156dp"
        android:layout_height="108dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/gagareger" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="156dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/resim222" />

    <Button
        android:id="@+id/button5"
        android:layout_width="156dp"
        android:layout_height="59dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/eczar_semibold"
        android:text="@string/places"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_awesome_compass"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>